# dharma-agent

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
src/dharma_agent/: agent_card.py  contracts.py  conversation.py  distill.py  executor.py  main.py  rendering.py  trainings.py
src/dharma_agent/memory/: __init__.py  pattern_store.py  profile_store.py  session_store.py
src/dharma_agent/skills/: common.py  guide.py  reflect.py  respond.py  review.py  teach.py
tests/: conftest.py  test_conversation.py  test_distill.py  test_executor.py  test_memory.py  test_server.py  test_skills.py
